fix: z-index issue on searchBar

--- a/src/components/backArrow/backArrow.module.scss
+++ b/src/components/backArrow/backArrow.module.scss
@@ -21,8 +21,8 @@
 
 .text {
     color: white;
-    margin-left: 1em;
-    font-size: var(--normal);
+    margin-left: 0.7em;
+    font-size: 22px;
 }
 
 .arrow {
