--- a/src/components/navbar/page.module.scss
+++ b/src/components/navbar/page.module.scss
@@ -9,7 +9,7 @@
     display: flex;
     padding-left: 0.5em;
     position: fixed;
-    z-index: 2;
+    z-index: 1;
 }
 
 .container {
@@ -59,7 +59,6 @@
     @extend .main;
     display: none;
     justify-content: space-between;
-    z-index: 2;
     padding: 0 1em;
 }
 
